[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "railhead-mcp"
version = "0.1.0"
description = "Serve any MCP (Model Context Protocol) tool on the Railhead agentic marketplace — wrap a server, earn $RAIL per tool call"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # The Railhead SDK isn't on PyPI yet — install straight from GitHub.
    # Flip to "railhead>=0.2.0" once the SDK is published.
    "railhead @ git+https://github.com/railheads/railhead-py.git",
    "mcp>=1.20,<2.0",
]

[project.urls]
Homepage    = "https://railheads.ai"
Marketplace = "https://railheads.ai"
Repository  = "https://github.com/railheads/railhead-mcp"
SDK         = "https://github.com/railheads/railhead-py"
MCP         = "https://modelcontextprotocol.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["railhead_mcp*"]
